# fight_club

./: .gitignore  LABELING_UI_DESIGN_BRIEF.md  README.md  main.py  pyproject.toml
src/: __init__.py  project_fight_club.ipynb
src/01_config/: video_config.py
src/02_data/: taxonomy.py
src/02_pose/: extraction.py
src/03_pose/: constants.py  dataclasses.py
src/06_visualization/: inference.py
src/07_pipeline/: orchestration.py
src/config/: __init__.py  video_config.py
src/data/: __init__.py  taxonomy.py
src/models/: __init__.py  action_classifier.py
src/pipeline/: __init__.py  orchestration.py
src/pose/: __init__.py  dataclasses.py  extraction.py  normalization.py
src/s05_pipeline/: orchestration.py
src/s06_visualization/: __init__.py  inference.py
src/training/: __init__.py  dataset.py  trainer.py
src/visualization/: __init__.py  inference.py
